--- a/package.json
+++ b/package.json
@@ -2,6 +2,45 @@
   "name": "hey-ben",
   "version": "0.0.1",
   "description": "Heyben app UI project",
+  "scripts": {
+    "test:watch": "npm test -- --watch",
+    "build": "webpack",
+    "start": "webpack-dev-server --devtool eval",
+    "lint": "eslint \"app/**/*.@(js|jsx)\""
+  },
+  "dependencies": {
+    "react": "^15.0.0-rc.2",
+    "react-dom": "^15.0.0-rc.2",
+    "redux": "^3.3.1",
+    "react-redux": "^4.4.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1",
+    "react-router": "^2.0.1",
+    "bootstrap": "^3.3.6",
+    "lodash": "^4.6.1",
+    "es6-promise": "^3.1.2",
+    "isomorphic-fetch": "^2.2.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "eslint": "^2.4.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.3",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "chai": "^3.5.0",
+    "enzyme": "^2.1.0",
+    "nock": "^7.4.0",
+    "redux-mock-store": "^1.0.2",
+    "open-browser-webpack-plugin": "^0.0.1",
+    "style-loader": "^0.13.0",
+    "css-loader": "^0.23.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
